
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct sockaddr_nl {int nl_pid; int nl_groups; int nl_pad; int nl_family; } ;
struct sockaddr {int dummy; } ;
struct sock_pid {int sock_fd; int pid; } ;
typedef int addr ;


 int AF_NETLINK ;
 int NETLINK_USERSOCK ;
 int SOCK_DGRAM ;
 int _bind (int,struct sockaddr*,int) ;
 scalar_t__ _getsockname (int,struct sockaddr_nl*,size_t*) ;
 int _socket (int ,int ,int ) ;
 int close (int) ;
 int perror (char*) ;

__attribute__((used)) static int create_netlink_candidate(struct sock_pid *sp)
{
  struct sockaddr_nl addr = {
    .nl_family = AF_NETLINK,
    .nl_pad = 0,
    .nl_pid = 0,
    .nl_groups = 0

  };
  size_t addr_len = sizeof(addr);

  if ((sp->sock_fd = _socket(AF_NETLINK, SOCK_DGRAM, NETLINK_USERSOCK)) == -1)
  {
    perror("[-] socket");
    goto fail;
  }

  if (_bind(sp->sock_fd, (struct sockaddr*)&addr, sizeof(addr)) == -1)
  {
    perror("[-] bind");
    goto fail_close;
  }

  if (_getsockname(sp->sock_fd, &addr, &addr_len))
  {
    perror("[-] getsockname");
    goto fail_close;
  }

  sp->pid = addr.nl_pid;

  return 0;

fail_close:
  close(sp->sock_fd);
fail:
  sp->sock_fd = -1;
  sp->pid = -1;
  return -1;
}
